--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,12 +13,12 @@ body {
 }
 
 .form-container {
-  width: 100%;
-  margin-bottom: 20px;
+  width: 80%;
   display: flex;
   border-radius: calc(0.5 * 100px);
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.38);
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .input-text {
