--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Exo 2", sans-serif;
 }
 
 body {
-  font-family: "Segoe UI", Arial, sans-serif;
   line-height: 1.4;
   color: #444;
   background: #fff;
@@ -13,12 +15,13 @@ body {
 }
 
 .form-container {
-  width: 80%;
+  width: 100%;
   display: flex;
   border-radius: calc(0.5 * 100px);
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.38);
   justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .input-text {
