--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,3 +85,12 @@ body {
     transform: translateX(0); /* Moves to its natural position */
   }
 }
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
